<resources>
    <string name="app_name">GBAndroidCore</string>
    <string name="b_1" translatable="false">1</string>
    <string name="b_2" translatable="false">2</string>
    <string name="b_3" translatable="false">3</string>
    <string name="b_4" translatable="false">4</string>
    <string name="b_5" translatable="false">5</string>
    <string name="b_6" translatable="false">6</string>
    <string name="b_7" translatable="false">7</string>
    <string name="b_8" translatable="false">8</string>
    <string name="b_9" translatable="false">9</string>
    <string name="b_0" translatable="false">0</string>
    <string name="b_add" translatable="false">+</string>
    <string name="b_subtract" translatable="false">-</string>
    <string name="b_multiply" translatable="false">*</string>
    <string name="b_divide" translatable="false">/</string>
    <string name="b_dot" translatable="false">.</string>
    <string name="b_getResult" translatable="false">=</string>
    <string name="b_clear" translatable="false">C</string>
    <string name="input_number_string">input number</string>
    <string name="result">result</string>
    <string name="calcDarkTheme">Dark theme</string>
    <string name="calcLightTheme">Light theme</string>
    <string name="b_negative_positive" translatable="false">+/-</string>
    <string name="orientation" translatable="false">portrait</string>
    <string name="version" translatable="false">31</string>
    <string name="b_delete" translatable="false">⨞</string>
    <string name="theme">Theme...</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="calcRedTheme">Red theme</string>
    <string name="ChooseTheme">Choose theme</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="drawer_header" translatable="false">Мои заметки</string>
    <string name="navigation_drawer_open" translatable="false">боковое меню открыто</string>
    <string name="navigation_drawer_close" translatable="false">боковое меню закрыто</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="about_text">About</string>
    <string name="add_note">Add note</string>
    <string name="change_avatar">Change avatar</string>
    <string name="settings_saved">Settings saved</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_theme">Change theme</string>
    <string name="theme_standart">Basic theme</string>
    <string name="theme_dark">Dark theme</string>
    <string name="g_auth_success">Google authorization complete</string>
</resources>