<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="4">

    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:backgroundTint="#D81B60"
        android:text="@string/b_clear"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_divide"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_multiply"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_substract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_subtract"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_1"
        android:textSize="@dimen/font_size_big"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_2"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_3"
        android:textSize="@dimen/font_size_big" />


    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_add"
        android:textSize="@dimen/font_size_big"

        />

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_4"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_5"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_6"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_7"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_8"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_9"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/btn_margins"
        android:backgroundTint="#D81B60"
        android:text="@string/b_getResult"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_margin="@dimen/btn_margins"
        android:backgroundTint="#3949AB"
        android:text="@string/b_0"
        android:textSize="@dimen/font_size_big" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/btn_margins"
        android:text="@string/b_dot"
        android:textSize="@dimen/font_size_big" />


</GridLayout>