<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />

        <item
            android:id="@+id/action_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/about" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_exit"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:title="@string/exit" />
    </group>
</menu>